Chg: Move config file to right location

--- a/phppgadmin.conf
+++ b/phppgadmin.conf
@@ -5,11 +5,9 @@ ServerName ${APACHE_SERVERNAME}
 <Directory /usr/share/phppgadmin>
 
 DirectoryIndex index.php
-AllowOverride None
+AllowOverride all
 
 order deny,allow
-deny from all
-allow from 127.0.0.0/255.0.0.0 ::1/128
 allow from all
 
 <IfModule mod_php5.c>
